force-app/main/default/objects/Valuation_Form__c/Valuation_Form__c.object-meta.xml
<CustomObject>
    <label>Valuation Form</label>
    <nameField>
        <displayFormat>VF-{0000}</displayFormat>
        <label>Valuation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuation Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>