force-app/main/default/objects/Valuation_Form__c/fields/Cost_Based__c.field-meta.xml
<CustomField>
    <fullName>Cost_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost-Based</label>
    <type>Checkbox</type>
</CustomField>