force-app/main/default/objects/Valuation_Form__c/fields/Historical_Average__c.field-meta.xml
<CustomField>
    <fullName>Historical_Average__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Average</label>
    <type>Checkbox</type>
</CustomField>