force-app/main/default/objects/Valuation_Form__c/fields/Market_Rate_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Comparison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Rate Comparison</label>
    <type>Checkbox</type>
</CustomField>