force-app/main/default/objects/Valuation_Form__c/fields/MoH_License_No__c.field-meta.xml
<CustomField>
    <fullName>MoH_License_No__c</fullName>
    <label>MoH License No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>