force-app/main/default/objects/Valuation_Form__c/fields/Third_Party_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Appraisal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third-Party Appraisal</label>
    <type>Checkbox</type>
</CustomField>