force-app/main/default/objects/Valuation_Form__c/fields/Total_Annual_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Estimate__c</fullName>
    <label>Total Annual Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>